--- a/style.css
+++ b/style.css
@@ -1,97 +1,74 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+/* Existing styles remain unchanged... */
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+@media screen and (max-width: 768px) {
+  .slider-container {
+    width: 100%;
+    height: 100%;
+  }
+
+  .left-slide {
+    width: 40%;
+    left: 0;
+  }
+
+  .right-slide {
+    left: 40%;
+    width: 60%;
+  }
+
+  .left-slide h1 {
+    font-size: 32px;
+  }
+
+  .slider-container .action-buttons button {
+    left: 40%;
+    padding: 12px;
+    font-size: 14px;
+  }
 }
 
-body {
-  font-family: "Open Sans", sans-serif;
-  height: 100vh;
-}
+@media screen and (max-width: 480px) {
+  .slider-container {
+    flex-direction: column;
+  }
 
-.slider-container {
-  position: relative;
-  overflow: hidden;
-  width: 100vw;
-  height: 100vh;
-}
+  .left-slide {
+    width: 100%;
+    position: static;
+    height: 50%;
+  }
 
-.left-slide {
-  height: 100%;
-  width: 35%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: transform 0.5s ease-in-out;
-}
+  .right-slide {
+    width: 100%;
+    height: 50%;
+    position: static;
+  }
 
-.left-slide > div {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-}
+  .left-slide h1 {
+    font-size: 28px;
+    margin-bottom: 8px;
+  }
 
-.left-slide h1 {
-  font-size: 40px;
-  margin-bottom: 10px;
-  margin-top: -30px;
-}
+  .action-buttons button {
+    left: auto;
+    top: auto;
+    position: static;
+    display: inline-block;
+    margin: 10px;
+    padding: 10px;
+    font-size: 12px;
+  }
 
-.right-slide {
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 35%;
-  width: 65%;
-  transition: transform 0.5s ease-in-out;
-}
+  .action-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+  }
 
-.right-slide > div {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  height: 100%;
-  width: 100%;
-}
-
-button {
-  background-color: #fff;
-  border: none;
-  color: #aaa;
-  cursor: pointer;
-  font-size: 16px;
-  padding: 15px;
-}
-
-button:hover {
-  color: #222;
-}
-
-button:focus {
-  outline: none;
-}
-
-.slider-container .action-buttons button {
-  position: absolute;
-  left: 35%;
-  top: 50%;
-  z-index: 100;
-}
-
-.slider-container .action-buttons .down-button {
-  transform: translateX(-100%);
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-}
-
-.slider-container .action-buttons .up-button {
-  transform: translateY(-100%);
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+  .slider-container .action-buttons .down-button,
+  .slider-container .action-buttons .up-button {
+    transform: none;
+    border-radius: 5px;
+  }
 }
